# pocketknife

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  codecov.yml
cmake/: CodeCoverage.cmake  compiler.cmake  config.cmake
include/pocketknife/allocator/: allocator.h
include/pocketknife/gc/: gc.h
include/pocketknife/hash/: fnv.h
include/pocketknife/os/: os.h
include/pocketknife/string/: builder.h  cord.h
include/pocketknife/trie/: trie.h
src/: CMakeLists.txt
src/allocator/: CMakeLists.txt  allocator.c  arena.c  internal.h  util.c
src/gc/: CMakeLists.txt  gc.c
src/hash/: CMakeLists.txt  fnv.c
src/os/: CMakeLists.txt  splitpath.c
src/os/unix/: time.c
src/os/win/: time.c
src/string/: CMakeLists.txt  cord.c  string_builder.c
src/trie/: CMakeLists.txt  trie.c
tests/: CMakeLists.txt
tests/allocator/: CMakeLists.txt  allocator_test.cc
tests/gc/: CMakeLists.txt  gc_test.cc
tests/hash/: CMakeLists.txt  fnv_test.cc
tests/string/: CMakeLists.txt  cord_test.cc  string_builder_test.cc
tests/trie/: CMakeLists.txt  trie_test.cc
