add_library(alloc STATIC allocator.c arena.c util.c)
add_library(alloc_shared SHARED allocator.c arena.c util.c)
add_library(alloc_asan INTERFACE)
target_link_libraries(alloc INTERFACE cmake_base_compiler_options INTERFACE cmake_public_include_options)
target_link_libraries(alloc_shared INTERFACE cmake_base_compiler_options INTERFACE cmake_public_include_options)
target_link_libraries(alloc_asan INTERFACE alloc cmake_asan_options)
